# ProjectMARTY

./: .gitignore  CMakeLists.txt  LICENSE
fileToCompile/: test.cpp
include/: marty.h
src/: main.cpp  marty.cpp  parser.cpp
